feat: add debug remote

--- a/crates/debug/Cargo.toml
+++ b/crates/debug/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { workspace = true, features = ["bevy_dev_tools"] }
+bevy = { workspace = true, features = ["bevy_dev_tools", "bevy_remote"] }
