--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,6 +11,7 @@ debug = ["dep:swarm_debug"]
 bevy = { workspace = true }
 
 swarm_camera = { path = "../crates/camera" }
+swarm_character = { path = "../crates/character" }
 swarm_core = { path = "../crates/core" }
 swarm_debug = { path = "../crates/debug", optional = true }
 swarm_input = { path = "../crates/input" }
